--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "quiz-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://mittatvasoft.github.io/quiz",
   "dependencies": {
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
@@ -26,7 +27,9 @@
     "format": "prettier --write ./src",
     "clean": "npm run lint:fix && npm run format",
     "start": "npm run clean && react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm run clean && react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -66,6 +69,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "gh-pages": "^3.2.3",
     "prettier": "^2.5.1",
     "typescript": "^4.4.2"
   }
