--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "format": "prettier --write ./src",
     "clean": "npm run lint:fix && npm run format",
     "start": "npm run clean && react-scripts start",
-    "build": "npm run clean && react-scripts build",
+    "build": "react-scripts build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
